<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings">

        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:defaultValue="russian_language"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/interface_language"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="timetable_bvt2201_db"
            app:entries="@array/group_entries"
            app:entryValues="@array/group_values"
            app:key="group_number"
            app:title="@string/group_title"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/theme_title" />

    </PreferenceCategory>

</PreferenceScreen>